--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         
         <div id="controls">
-            <button id="hit-button">Hit</button>
+            <button id="hit-button" onclick ="playerHit()">Hit</button>
             <button id="stay-button" onclick="dealerTurn()">Stay</button>
         </div>
 
